# Python_AutoQA5_2022

./: README.md  pyproject.toml
Homework QA5/Lesson 3 (lists, sets, tuples)/: Lesson 3 tips from Aigul.py  Task 3.7 (list sort).py
Homework QA5/Lesson 4 (lamda, def, kwargs)/: 4.2. Args & Kwargs.py  my_calc.py
Homework QA5/Lesson 5 (OOP, Git, GitHub)/: 5.1. Class creation.py
