[tool.poetry]
name = "poetry-qa"
version = "0.1.0"
description = ""
authors = ["Sergey Li <li.sergey@yahoo.com>"]
readme = "README.md"
packages = [{include = "poetry_qa"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
